--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
 application: ud859
 module: default
-version: uno
+version: v1
 
 runtime: go
 api_version: go1
@@ -11,8 +11,9 @@ basic_scaling:
   max_instances: 5
 
 handlers:
-- url: /conference/v1/.*
+- url: /_ah/spi/.*
   script: _go_app
+  secure: always
 
 - url: /((css|fonts|img|js|partials)/.+)$
   static_files: webapp/\1
