--- a/app.yaml
+++ b/app.yaml
@@ -1,14 +1,9 @@
-application: ud859
+application: ud859-go
 module: default
 version: v1
 
 runtime: go
 api_version: go1
-
-instance_class: B2
-
-basic_scaling:
-  max_instances: 5
 
 handlers:
 - url: /_ah/spi/.*
