better search support

--- a/index.yaml
+++ b/index.yaml
@@ -2,25 +2,9 @@ indexes:
 
 - kind: Conference
   properties:
-  - name: CITY
-  - name: NAME
-
-- kind: Conference
-  properties:
-  - name: MAX_ATTENDEES
-  - name: NAME
-
-- kind: Conference
-  properties:
-  - name: MONTH
-  - name: NAME
-
-- kind: Conference
-  properties:
-  - name: TOPIC
-  - name: NAME
+  - name: START_DATE
 
 - kind: Conference
   ancestor: yes
   properties:
-  - name: NAME
+  - name: START_DATE
