keep search index in sync with the datastore

--- a/app.yaml
+++ b/app.yaml
@@ -18,6 +18,10 @@ handlers:
   script: _go_app
   login: admin
 
+- url: /clean_index
+  script: _go_app
+  login: admin
+
 - url: /((css|fonts|img|js|partials)/.+)$
   static_files: webapp/\1
   upload: webapp
